# spider_solitaire

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: AnimationWrapper.cpp  AnimationWrapper.hpp  AnimationWrapperST.hpp  Card.hpp  Command.hpp  ControllerSpider.hpp  DealOneRound.hpp  Deck.hpp  DeckSpades.hpp  FillFoundationPile.hpp  ModelSpider.hpp  Move.hpp  ViewSpider.hpp
src/: AnimationWrapper.cpp  AnimationWrapperST.cpp  Card.cpp  ControllerSpider.cpp  DealOneRound.cpp  DeckSpades.cpp  FillFoundationPile.cpp  Main.cpp  ModelSpider.cpp  Move.cpp  ViewSpider.cpp
